--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,41 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" itemscope="" itemtype="http://schema.org/WebPage">
-<head>
-<meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<script type="text/javascript">/* Copyright 2008 Google. */ (function() { (function(){function e(a){this.t={};this.tick=function(a,c,b){this.t[a]=[void 0!=b?b:(new Date).getTime(),c];if(void 0==b)try{window.console.timeStamp("CSI/"+a)}catch(h){}};this.tick("start",null,a)}var a,d;window.performance&&(d=(a=window.performance.timing)&&a.responseStart);var f=0<d?new e(d):new e;window.jstiming={Timer:e,load:f};if(a){var c=a.navigationStart;0<c&&d>=c&&(window.jstiming.srt=d-c)}if(a){var b=window.jstiming.load;0<c&&d>=c&&(b.tick("_wtsrt",void 0,c),b.tick("wtsrt_","_wtsrt",d),
-b.tick("tbsd_","wtsrt_"))}try{a=null,window.chrome&&window.chrome.csi&&(a=Math.floor(window.chrome.csi().pageT),b&&0<c&&(b.tick("_tbnd",void 0,window.chrome.csi().startE),b.tick("tbnd_","_tbnd",c))),null==a&&window.gtbExternal&&(a=window.gtbExternal.pageT()),null==a&&window.external&&(a=window.external.pageT,b&&0<c&&(b.tick("_tbnd",void 0,window.external.startE),b.tick("tbnd_","_tbnd",c))),a&&(window.jstiming.pt=a)}catch(g){}})(); })()
-</script>
-<link rel="shortcut icon" type="image/x-icon" href="//www.google.com/images/icons/product/sites-16.ico" />
-<link rel="apple-touch-icon" href="https://ssl.gstatic.com/sites/p/683a48/system/app/images/apple-touch-icon.png" type="image/png" />
-<script type="text/javascript">/* Copyright 2008 Google. */ (function() { function d(a){return document.getElementById(a)}window.byId=d;function g(a){return a.replace(/^\s+|\s+$/g,"")}window.trim=g;var h=[],k=0;window.JOT_addListener=function(a,b,c){var f=new String(k++);a={eventName:a,handler:b,compId:c,key:f};h.push(a);return f};window.JOT_removeListenerByKey=function(a){for(var b=0;b<h.length;b++)if(h[b].key==a){h.splice(b,1);break}};window.JOT_removeAllListenersForName=function(a){for(var b=0;b<h.length;b++)h[b].eventName==a&&h.splice(b,1)};
-window.JOT_postEvent=function(a,b,c){var f={eventName:a,eventSrc:b||{},payload:c||{}};if(window.JOT_fullyLoaded)for(b=h.length,c=0;c<b&&c<h.length;c++){var e=h[c];e&&e.eventName==a&&(f.listenerCompId=e.compId||"",(e="function"==typeof e.handler?e.handler:window[e.handler])&&e(f))}else window.JOT_delayedEvents.push({eventName:a,eventSrc:b,payload:c})};window.JOT_delayedEvents=[];window.JOT_fullyLoaded=!1;
-window.JOT_formatRelativeToNow=function(a,b){a=((new Date).getTime()-a)/6E4;if(1440<=a||0>a)return null;var c=0;60<=a&&(a/=60,c=2);2<=a&&c++;return b?window.JOT_siteRelTimeStrs[c].replace("__duration__",Math.floor(a)):window.JOT_userRelTimeStrs[c].replace("__duration__",Math.floor(a))}; })()
-</script>
-<script>
 
-  
-
-  var breadcrumbs = [{"path":"/site/thraciansoftware1/home","deleted":false,"title":"Privacy Policy","dir":"ltr"}];
-  var JOT_clearDotPath = 'https://ssl.gstatic.com/sites/p/683a48/system/app/images/cleardot.gif';
-
-  
-  var JOT_userRelTimeStrs = ["um minuto atr\u00e1s","__duration__ minutos atr\u00e1s","uma hora atr\u00e1s","h\u00e1 __duration__ horas"];
-
-  
-  
-
-  
-
-  var webspace = {"enableAnalytics":false,"pageSharingId":"jotspot_page","enableUniversalAnalytics":false,"sharingPolicy":"OPENED","siteTitle":"ThracianSoftware1","adsensePublisherId":null,"features":{"validateClientGvizDataSourceUrls":true,"contactStoreMigrationPollForGapi":true,"gapiLoaderUtil":true,"moreMobileStyleImprovements":true,"accumulativeBubblePanelCreation":true,"oAuthForChartsApi":true,"batchFileCabinetOperations":true,"fileCabinetScreenReaderFix":true,"pageDrafts":false,"mobileOrientationFix":true,"plusBadge":false,"pdfEmbedSupport":false,"jsClickFix":true},"isPublic":true,"isConsumer":true,"serverFlags":{"cajaBaseUrl":"//www.gstatic.com/caja","cajaDebugMode":false},"onepickBaseUrl":"https://docs.google.com","domainAnalyticsAccountId":"","plusPageId":"","signInUrl":"https://accounts.google.com/AccountChooser?continue\u003dhttps://sites.google.com/site/thraciansoftware1/home\u0026service\u003djotspot","analyticsAccountId":"","scottyUrl":"/_/upload","homePath":"/","siteNoticeUrlEnabled":null,"plusPageUrl":"","adsensePromoClickedOrSiteIneligible":true,"csiReportUri":"https://gg.google.com/csi","sharingId":"jotspot","termsUrl":"//www.google.com/intl/pt/policies/terms/","gvizVersion":1,"editorResources":{"sitelayout":["https://ssl.gstatic.com/sites/p/683a48/system/app/css/sitelayouteditor.css"],"text":["https://ssl.gstatic.com/sites/p/683a48/system/js/codemirror.js","https://ssl.gstatic.com/sites/p/683a48/system/app/css/codemirror_css.css","https://ssl.gstatic.com/sites/p/683a48/system/js/trog_edit__pt_br.js","https://ssl.gstatic.com/sites/p/683a48/system/app/css/trogedit.css","/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/editor.css","https://ssl.gstatic.com/sites/p/683a48/system/app/css/codeeditor.css","/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/camelot/editor-jfk.css"]},"sharingUrlPrefix":"/_/sharing","isAdsenseEnabled":true,"domain":"defaultdomain","baseUri":"/site/thraciansoftware1","name":"thraciansoftware1","siteTemplateId":false,"siteNoticeRevision":null,"siteNoticeUrlAddress":null,"siteNoticeMessage":null,"page":{"isRtlLocale":false,"canDeleteWebspace":null,"isPageDraft":null,"parentPath":null,"parentWuid":null,"siteLocale":"tr","timeZone":"America/Los_Angeles","type":"text","title":"Privacy Policy","locale":"pt_BR","wuid":"wuid:gx:2aec587f2890a0e","revision":2,"path":"/home","isSiteRtlLocale":false,"pageInheritsPermissions":null,"name":"home","canChangePath":false,"state":"","properties":{},"bidiEnabled":false,"currentTemplate":{"path":"/system/app/pagetemplates/text","title":"P\u00e1gina da web"}},"canPublishScriptToAnyone":true,"user":{"keyboardShortcuts":true,"sessionIndex":"","guest_":true,"displayNameOrEmail":"guest","userName":"guest","uid":"","renderMobile":false,"domain":"","namespace":"","hasWriteAccess":false,"namespaceUser":false,"primaryEmail":"guest","hasAdminAccess":false},"gadgets":{"baseUri":"/site/thraciansoftware1/system/app/pages/gadgets"}};
-  webspace.page.breadcrumbs = breadcrumbs;
-
-  
-  var JOT_siteRelTimeStrs = ["bir dakika \u00f6nce","__duration__ dakika \u00f6nce","bir saat \u00f6nce","__duration__ saat \u00f6nce"];
-
-</script>
-<script type="text/javascript">
-                window.jstiming.load.tick('scl');
-              </script>
 <meta name="title" content="ThracianSoftware1" />
 <meta itemprop="name" content="ThracianSoftware1" />
 <meta property="og:title" content="ThracianSoftware1" />
@@ -91,9 +55,7 @@ window.JOT_formatRelativeToNow=function(a,b){a=((new Date).getTime()-a)/6E4;if(1
 <table xmlns="http://www.w3.org/1999/xhtml" cellspacing="0" class="sites-layout-name-one-column sites-layout-hbox"><tbody><tr><td class="sites-layout-tile sites-tile-name-content-1"><div dir="ltr"><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Your privacy is important to Thracian Software.
 Sometimes we need information to provide services that you request, this
 privacy statement applies to thraciansoftware.com and its products, namely
-Angle Meter Visual+Bubble, Angle Meter Visual+Bubble
-Pro, DiopThrace, </span><span style="font-size:10.0pt;font-family:Roboto;color:#222222;background:#f1f1f1">Dioptra Thrace Pro, Laser Level Capture, Laser Level Capture Pro,
-Traveler's Cam, and Traveler's Cam</span></p><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333"><br />
+Truck Madness, Flappy porky, Fart button, Ba dum tss - Rimshot widget, álcool ou Gasolina, PigScape
 <br />
 <b>Personal Information</b> <br />
 We DO NOT collect, store or use any personal information while you visit,
