--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="ThracianSoftware1" />
 <style type="text/css">
 </style>
-<link rel="stylesheet" type="text/css" href="https://ssl.gstatic.com/sites/p/683a48/system/app/themes/mintchip/standard-css-mintchip-ltr-ltr.css" />
+<link rel="stylesheet" type="text/css" href="https://ssl.gstatic.com/sites/p/83a48/system/app/themes/mintchip/standard-css-mintchip-ltr-ltr.css" />
 <link rel="stylesheet" type="text/css" href="/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/overlay.css?cb=mintchip150goog-ws-leftnone30themedefaultstandard" />
 <link rel="stylesheet" type="text/css" href="/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/camelot/allthemes-view.css" />
 <!--[if IE]>
@@ -52,7 +52,7 @@
 </h3>
 <div id="sites-canvas-main" class="sites-canvas-main">
 <div id="sites-canvas-main-content">
-<table xmlns="http://www.w3.org/1999/xhtml" cellspacing="0" class="sites-layout-name-one-column sites-layout-hbox"><tbody><tr><td class="sites-layout-tile sites-tile-name-content-1"><div dir="ltr"><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Your privacy is important to Thracian Software.
+<table xmlns="http://www.w3.org/1999/xhtml" cellspacing="0" class="sites-layout-name-one-column sites-layout-hbox"><tbody><tr><td class="sites-layout-tile sites-tile-name-content-1"><div dir="ltr"><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Your privacy is important to Letonai Studio.
 Sometimes we need information to provide services that you request, this
 privacy statement applies to thraciansoftware.com and its products, namely
 Truck Madness, Flappy porky, Fart button, Ba dum tss - Rimshot widget, álcool ou Gasolina, PigScape
@@ -89,7 +89,7 @@ version, unique device identifiers, and mobile network information). Thracian
 Software will not share that information with third parties. <br />
 <br />
 <b>Location information </b><br />
-When you use a location-enabled Thracian Software service, we may collect and
+When you use a location-enabled Letonai Studio service, we may collect and
 process information about your actual location, like GPS signals sent by a
 mobile device. We may also use various technologies to determine location, such
 as sensor data from your device that may, for example, provide information on
@@ -98,11 +98,11 @@ nearby Wi-Fi access points and cell towers.</span></p><p style="margin-bottom:7.
 <b>Unique application numbers</b> <br />
 Certain services include a unique application number. This number and
 information about your installation (for example, the operating system type and
-application version number) may be sent to Thracian Software when you install
+application version number) may be sent to Letonai Studio when you install
 or uninstall that service or when that service periodically contacts our
 servers, such as for automatic updates. <br />
 <br />
-Thracian Software will occasionally update this privacy statement. When we do
+Letonai Studio will occasionally update this privacy statement. When we do
 so, we will also revise the "last modified" date of the privacy
 statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51,51);font-family:helvetica,arial,sans-serif">
 </p><p><span lang="EN-US"> </span></p></div></td></tr></tbody></table>
