--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<meta name="title" content="ThracianSoftware1" />
-<meta itemprop="name" content="ThracianSoftware1" />
-<meta property="og:title" content="ThracianSoftware1" />
+<meta name="title" content="letonaistudio" />
+<meta itemprop="name" content="letonaistudio" />
+<meta property="og:title" content="letonaistudio" />
 <style type="text/css">
 </style>
 <link rel="stylesheet" type="text/css" href="https://ssl.gstatic.com/sites/p/83a48/system/app/themes/mintchip/standard-css-mintchip-ltr-ltr.css" />
-<link rel="stylesheet" type="text/css" href="/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/overlay.css?cb=mintchip150goog-ws-leftnone30themedefaultstandard" />
-<link rel="stylesheet" type="text/css" href="/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/camelot/allthemes-view.css" />
+<link rel="stylesheet" type="text/css" href="/site/letonaistudio/_/rsrc/1486051552000/system/app/css/overlay.css?cb=mintchip150goog-ws-leftnone30themedefaultstandard" />
+<link rel="stylesheet" type="text/css" href="/site/letonaistudio/_/rsrc/1486051552000/system/app/css/camelot/allthemes-view.css" />
 <!--[if IE]>
-          <link rel="stylesheet" type="text/css" href="/site/thraciansoftware1/system/app/css/camelot/allthemes%2die.css" />
+          <link rel="stylesheet" type="text/css" href="/site/letonaistudio/system/app/css/camelot/allthemes%2die.css" />
         <![endif]-->
-<title>ThracianSoftware1</title>
+<title>Letonai Studio - Privacy Policy</title>
 <script type="text/javascript">
                 window.jstiming.load.tick('cl');
               </script>
@@ -27,7 +27,7 @@
 <div xmlns="http://www.w3.org/1999/xhtml" id="sites-chrome-header-wrapper" style="">
 <table id="sites-chrome-header" class="sites-layout-hbox" cellspacing="0" style="">
 <tr class="sites-header-primary-row" id="sites-chrome-userheader">
-<td id="sites-header-title" class="" role="banner"><div class="sites-header-cell-buffer-wrapper"><h2><a href="https://sites.google.com/site/thraciansoftware1/" dir="ltr" id="sites-chrome-userheader-title">ThracianSoftware1</a></h2></div></td><td class="sites-layout-searchbox  "><div class="sites-header-cell-buffer-wrapper"><form id="sites-searchbox-form" action="/site/thraciansoftware1/system/app/pages/search" role="search"><input type="hidden" id="sites-searchbox-scope" name="scope" value="search-site" /><input type="text" id="jot-ui-searchInput" name="q" size="20" value="" aria-label="Bu sitede ara" /><div id="sites-searchbox-button-set" class="goog-inline-block"><div role="button" id="sites-searchbox-search-button" class="goog-inline-block jfk-button jfk-button-standard" tabindex="0">Bu sitede ara</div></div></form></div></td>
+<td id="sites-header-title" class="" role="banner"><div class="sites-header-cell-buffer-wrapper"><h2><a href="https://sites.google.com/site/letonaistudio/" dir="ltr" id="sites-chrome-userheader-title">letonaistudio</a></h2></div></td><td class="sites-layout-searchbox  "><div class="sites-header-cell-buffer-wrapper"><form id="sites-searchbox-form" action="/site/letonaistudio/system/app/pages/search" role="search"><input type="hidden" id="sites-searchbox-scope" name="scope" value="search-site" /><input type="text" id="jot-ui-searchInput" name="q" size="20" value="" aria-label="Bu sitede ara" /><div id="sites-searchbox-button-set" class="goog-inline-block"><div role="button" id="sites-searchbox-search-button" class="goog-inline-block jfk-button jfk-button-standard" tabindex="0">Bu sitede ara</div></div></form></div></td>
 </tr>
 <tr class="sites-header-secondary-row" id="sites-chrome-horizontal-nav">
 <td colspan="2" id="sites-chrome-header-horizontal-nav-container" role="navigation">
@@ -40,7 +40,7 @@
 <table id="sites-chrome-main" class="sites-layout-hbox" cellspacing="0" cellpadding="{scmCellpadding}" border="0">
 <tr>
 <td id="sites-chrome-sidebar-left" class="sites-layout-sidebar-left initial" style="width:150px">
-<div xmlns="http://www.w3.org/1999/xhtml" id="COMP_2bd" class="sites-embed" role="navigation"><div class="sites-embed-content sites-sidebar-nav"><ul role="navigation" jotId="navList"><li class="nav-first "><div class="current-bg" jotId="wuid:gx:2aec587f2890a0e" dir="ltr" style="padding-left: 5px;">Privacy Policy</div></li><li class=""><div dir="ltr" style="padding-left: 5px;"><a href="/site/thraciansoftware1/system/app/pages/sitemap/hierarchy" jotId="wuid:gx:49fb002a18ad8f25" class="sites-navigation-link">Site Haritası</a></div></li></ul></div></div>
+<div xmlns="http://www.w3.org/1999/xhtml" id="COMP_2bd" class="sites-embed" role="navigation"><div class="sites-embed-content sites-sidebar-nav"><ul role="navigation" jotId="navList"><li class="nav-first "><div class="current-bg" jotId="wuid:gx:2aec587f2890a0e" dir="ltr" style="padding-left: 5px;">Privacy Policy</div></li><li class=""><div dir="ltr" style="padding-left: 5px;"><a href="/site/letonaistudio/system/app/pages/sitemap/hierarchy" jotId="wuid:gx:49fb002a18ad8f25" class="sites-navigation-link">Site Haritası</a></div></li></ul></div></div>
 </td>
 <td id="sites-canvas-wrapper">
 <div id="sites-canvas" role="main">
@@ -93,7 +93,7 @@ When you use a location-enabled Letonai Studio service, we may collect and
 process information about your actual location, like GPS signals sent by a
 mobile device. We may also use various technologies to determine location, such
 as sensor data from your device that may, for example, provide information on
-nearby Wi-Fi access points and cell towers.</span></p><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><b><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Camera </span></b></p><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Certain apps may use camera. Any data from camera and other sensors is neither collected nor distributed by Thracian Software. All this personal data is saved only to user's device with user consent and action.<br />
+nearby Wi-Fi access points and cell towers.</span></p><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><b><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Camera </span></b></p><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Certain apps may use camera. Any data from camera and other sensors is neither collected nor distributed by Letonai Studio. All this personal data is saved only to user's device with user consent and action.<br />
 <br />
 <b>Unique application numbers</b> <br />
 Certain services include a unique application number. This number and
@@ -128,7 +128,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
 </div> 
 </div> 
 <div id="sites-chrome-adminfooter-container">
-<div xmlns="http://www.w3.org/1999/xhtml" class="sites-adminfooter" role="navigation"><p><a class="sites-system-link" href="https://www.google.com/a/UniversalLogin?continue=https://sites.google.com/site/thraciansoftware1/home&amp;service=jotspot">Fazer login</a><span aria-hidden="true">|</span><a class="sites-system-link" href="/site/thraciansoftware1/system/app/pages/recentChanges">Atividade recente no site</a><span aria-hidden="true">|</span><a class="sites-system-link" href="https://sites.google.com/site/thraciansoftware1/system/app/pages/reportAbuse" target="_blank">Denunciar abuso</a><span aria-hidden="true">|</span><a class="sites-system-link" href="javascript:;" onclick="window.open(webspace.printUrl)">Imprimir página</a><span aria-hidden="true">|</span><span class="sites-system-link">Tecnologia</span> <b class="powered-by"><a href="http://sites.google.com">Google Sites</a></b></p></div>
+<div xmlns="http://www.w3.org/1999/xhtml" class="sites-adminfooter" role="navigation"><p><a class="sites-system-link" href="https://www.google.com/a/UniversalLogin?continue=https://sites.google.com/site/letonaistudio/home&amp;service=jotspot">Fazer login</a><span aria-hidden="true">|</span><a class="sites-system-link" href="/site/letonaistudio/system/app/pages/recentChanges">Atividade recente no site</a><span aria-hidden="true">|</span><a class="sites-system-link" href="https://sites.google.com/site/letonaistudio/system/app/pages/reportAbuse" target="_blank">Denunciar abuso</a><span aria-hidden="true">|</span><a class="sites-system-link" href="javascript:;" onclick="window.open(webspace.printUrl)">Imprimir página</a><span aria-hidden="true">|</span><span class="sites-system-link">Tecnologia</span> <b class="powered-by"><a href="http://sites.google.com">Google Sites</a></b></p></div>
 </div>
 </div> 
 </div> 
@@ -141,7 +141,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
 <script xmlns="http://www.w3.org/1999/xhtml" type="text/javascript">
     window.jstiming.load.tick('jl');
   </script>
-<script xmlns="http://www.w3.org/1999/xhtml">if (webspace.editorResources['text']) {webspace.editorResources['text'].unshift('\/site\/thraciansoftware1\/system\/app\/css\/overlay.css?cb\x3dmintchip150goog-ws-leftnone30themedefaultstandard');webspace.editorResources['text'].unshift('\/site\/thraciansoftware1\/_\/rsrc\/1486051552000\/system\/app\/themes\/mintchip\/standard-css-mintchip-ltr-ltr.css');}</script>
+<script xmlns="http://www.w3.org/1999/xhtml">if (webspace.editorResources['text']) {webspace.editorResources['text'].unshift('\/site\/letonaistudio\/system\/app\/css\/overlay.css?cb\x3dmintchip150goog-ws-leftnone30themedefaultstandard');webspace.editorResources['text'].unshift('\/site\/letonaistudio\/_\/rsrc\/1486051552000\/system\/app\/themes\/mintchip\/standard-css-mintchip-ltr-ltr.css');}</script>
 <script xmlns="http://www.w3.org/1999/xhtml">
       
           sites.core.Analytics.createTracker();
@@ -153,7 +153,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
                         'sites-searchbox-search-button',
                         {"object":[]}['object'],
                         'search-site',
-                        {"label":"Arama se\u00e7eneklerini yap\u0131land\u0131r...","url":"/site/thraciansoftware1/system/app/pages/admin/settings"});
+                        {"label":"Arama se\u00e7eneklerini yap\u0131land\u0131r...","url":"/site/letonaistudio/system/app/pages/admin/settings"});
                   </script>
 <script xmlns="http://www.w3.org/1999/xhtml" type="text/javascript">
       gsites.HoverPopupMenu.createSiteDropdownMenus('sites-header-nav-dropdown', false);
@@ -165,7 +165,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
 <script xmlns="http://www.w3.org/1999/xhtml" type="text/javascript">
   setTimeout(function() {
     var fingerprint = gsites.date.TimeZone.getFingerprint([1109635200000, 1128902400000, 1130657000000, 1143333000000, 1143806400000, 1145000000000, 1146380000000, 1152489600000, 1159800000000, 1159500000000, 1162095000000, 1162075000000, 1162105500000]);
-    gsites.Xhr.send('https://sites.google.com/site/thraciansoftware1/_/tz', null, null, 'GET', null, null, { afjstz: fingerprint });
+    gsites.Xhr.send('https://sites.google.com/site/letonaistudio/_/tz', null, null, 'GET', null, null, { afjstz: fingerprint });
   }, 500);
 </script>
 <script xmlns="http://www.w3.org/1999/xhtml">
@@ -198,7 +198,6 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
     if (webspace.user.hasWriteAccess) {
       JOT_decorateButtons();
     }
-
     // Fires delayed events.
     (function() {
       JOT_fullyLoaded = true;
