--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,15 +1,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" itemscope="" itemtype="http://schema.org/WebPage">
+<head>
+<meta http-equiv="X-UA-Compatible" content="chrome=1" />
+<script type="text/javascript">/* Copyright 2008 Google. */ (function() { (function(){function e(a){this.t={};this.tick=function(a,c,b){this.t[a]=[void 0!=b?b:(new Date).getTime(),c];if(void 0==b)try{window.console.timeStamp("CSI/"+a)}catch(h){}};this.tick("start",null,a)}var a,d;window.performance&&(d=(a=window.performance.timing)&&a.responseStart);var f=0<d?new e(d):new e;window.jstiming={Timer:e,load:f};if(a){var c=a.navigationStart;0<c&&d>=c&&(window.jstiming.srt=d-c)}if(a){var b=window.jstiming.load;0<c&&d>=c&&(b.tick("_wtsrt",void 0,c),b.tick("wtsrt_","_wtsrt",d),
+b.tick("tbsd_","wtsrt_"))}try{a=null,window.chrome&&window.chrome.csi&&(a=Math.floor(window.chrome.csi().pageT),b&&0<c&&(b.tick("_tbnd",void 0,window.chrome.csi().startE),b.tick("tbnd_","_tbnd",c))),null==a&&window.gtbExternal&&(a=window.gtbExternal.pageT()),null==a&&window.external&&(a=window.external.pageT,b&&0<c&&(b.tick("_tbnd",void 0,window.external.startE),b.tick("tbnd_","_tbnd",c))),a&&(window.jstiming.pt=a)}catch(g){}})(); })()
+</script>
+<link rel="shortcut icon" type="image/x-icon" href="//www.google.com/images/icons/product/sites-16.ico" />
+<link rel="apple-touch-icon" href="https://ssl.gstatic.com/sites/p/683a48/system/app/images/apple-touch-icon.png" type="image/png" />
+<script type="text/javascript">/* Copyright 2008 Google. */ (function() { function d(a){return document.getElementById(a)}window.byId=d;function g(a){return a.replace(/^\s+|\s+$/g,"")}window.trim=g;var h=[],k=0;window.JOT_addListener=function(a,b,c){var f=new String(k++);a={eventName:a,handler:b,compId:c,key:f};h.push(a);return f};window.JOT_removeListenerByKey=function(a){for(var b=0;b<h.length;b++)if(h[b].key==a){h.splice(b,1);break}};window.JOT_removeAllListenersForName=function(a){for(var b=0;b<h.length;b++)h[b].eventName==a&&h.splice(b,1)};
+window.JOT_postEvent=function(a,b,c){var f={eventName:a,eventSrc:b||{},payload:c||{}};if(window.JOT_fullyLoaded)for(b=h.length,c=0;c<b&&c<h.length;c++){var e=h[c];e&&e.eventName==a&&(f.listenerCompId=e.compId||"",(e="function"==typeof e.handler?e.handler:window[e.handler])&&e(f))}else window.JOT_delayedEvents.push({eventName:a,eventSrc:b,payload:c})};window.JOT_delayedEvents=[];window.JOT_fullyLoaded=!1;
+window.JOT_formatRelativeToNow=function(a,b){a=((new Date).getTime()-a)/6E4;if(1440<=a||0>a)return null;var c=0;60<=a&&(a/=60,c=2);2<=a&&c++;return b?window.JOT_siteRelTimeStrs[c].replace("__duration__",Math.floor(a)):window.JOT_userRelTimeStrs[c].replace("__duration__",Math.floor(a))}; })()
+</script>
+<script>
 
-<meta name="title" content="letonaistudio" />
-<meta itemprop="name" content="letonaistudio" />
-<meta property="og:title" content="letonaistudio" />
+  
+
+  var breadcrumbs = [{"path":"/site/thraciansoftware1/home","deleted":false,"title":"Privacy Policy","dir":"ltr"}];
+  var JOT_clearDotPath = 'https://ssl.gstatic.com/sites/p/683a48/system/app/images/cleardot.gif';
+
+  
+  var JOT_userRelTimeStrs = ["um minuto atr\u00e1s","__duration__ minutos atr\u00e1s","uma hora atr\u00e1s","h\u00e1 __duration__ horas"];
+
+  
+  
+
+  
+
+  var webspace = {"enableAnalytics":false,"pageSharingId":"jotspot_page","enableUniversalAnalytics":false,"sharingPolicy":"OPENED","siteTitle":"ThracianSoftware1","adsensePublisherId":null,"features":{"validateClientGvizDataSourceUrls":true,"contactStoreMigrationPollForGapi":true,"gapiLoaderUtil":true,"moreMobileStyleImprovements":true,"accumulativeBubblePanelCreation":true,"oAuthForChartsApi":true,"batchFileCabinetOperations":true,"fileCabinetScreenReaderFix":true,"pageDrafts":false,"mobileOrientationFix":true,"plusBadge":false,"pdfEmbedSupport":false,"jsClickFix":true},"isPublic":true,"isConsumer":true,"serverFlags":{"cajaBaseUrl":"//www.gstatic.com/caja","cajaDebugMode":false},"onepickBaseUrl":"https://docs.google.com","domainAnalyticsAccountId":"","plusPageId":"","signInUrl":"https://accounts.google.com/AccountChooser?continue\u003dhttps://sites.google.com/site/thraciansoftware1/home\u0026service\u003djotspot","analyticsAccountId":"","scottyUrl":"/_/upload","homePath":"/","siteNoticeUrlEnabled":null,"plusPageUrl":"","adsensePromoClickedOrSiteIneligible":true,"csiReportUri":"https://gg.google.com/csi","sharingId":"jotspot","termsUrl":"//www.google.com/intl/pt/policies/terms/","gvizVersion":1,"editorResources":{"sitelayout":["https://ssl.gstatic.com/sites/p/683a48/system/app/css/sitelayouteditor.css"],"text":["https://ssl.gstatic.com/sites/p/683a48/system/js/codemirror.js","https://ssl.gstatic.com/sites/p/683a48/system/app/css/codemirror_css.css","https://ssl.gstatic.com/sites/p/683a48/system/js/trog_edit__pt_br.js","https://ssl.gstatic.com/sites/p/683a48/system/app/css/trogedit.css","/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/editor.css","https://ssl.gstatic.com/sites/p/683a48/system/app/css/codeeditor.css","/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/camelot/editor-jfk.css"]},"sharingUrlPrefix":"/_/sharing","isAdsenseEnabled":true,"domain":"defaultdomain","baseUri":"/site/thraciansoftware1","name":"thraciansoftware1","siteTemplateId":false,"siteNoticeRevision":null,"siteNoticeUrlAddress":null,"siteNoticeMessage":null,"page":{"isRtlLocale":false,"canDeleteWebspace":null,"isPageDraft":null,"parentPath":null,"parentWuid":null,"siteLocale":"tr","timeZone":"America/Los_Angeles","type":"text","title":"Privacy Policy","locale":"pt_BR","wuid":"wuid:gx:2aec587f2890a0e","revision":2,"path":"/home","isSiteRtlLocale":false,"pageInheritsPermissions":null,"name":"home","canChangePath":false,"state":"","properties":{},"bidiEnabled":false,"currentTemplate":{"path":"/system/app/pagetemplates/text","title":"P\u00e1gina da web"}},"canPublishScriptToAnyone":true,"user":{"keyboardShortcuts":true,"sessionIndex":"","guest_":true,"displayNameOrEmail":"guest","userName":"guest","uid":"","renderMobile":false,"domain":"","namespace":"","hasWriteAccess":false,"namespaceUser":false,"primaryEmail":"guest","hasAdminAccess":false},"gadgets":{"baseUri":"/site/thraciansoftware1/system/app/pages/gadgets"}};
+  webspace.page.breadcrumbs = breadcrumbs;
+
+  
+  var JOT_siteRelTimeStrs = ["bir dakika \u00f6nce","__duration__ dakika \u00f6nce","bir saat \u00f6nce","__duration__ saat \u00f6nce"];
+
+</script>
+<script type="text/javascript">
+                window.jstiming.load.tick('scl');
+              </script>
+<meta name="title" content="LetonaiStudios" />
+<meta itemprop="name" content="LetonaiStudios" />
+<meta property="og:title" content="LEtonaiStudio" />
 <style type="text/css">
 </style>
-<link rel="stylesheet" type="text/css" href="https://ssl.gstatic.com/sites/p/83a48/system/app/themes/mintchip/standard-css-mintchip-ltr-ltr.css" />
-<link rel="stylesheet" type="text/css" href="/site/ThracianSoftware1/_/rsrc/1486051552000/system/app/css/overlay.css?cb=mintchip150goog-ws-leftnone30themedefaultstandard" />
-<link rel="stylesheet" type="text/css" href="/site/ThracianSoftware1/_/rsrc/1486051552000/system/app/css/camelot/allthemes-view.css" />
+<link rel="stylesheet" type="text/css" href="https://ssl.gstatic.com/sites/p/683a48/system/app/themes/mintchip/standard-css-mintchip-ltr-ltr.css" />
+<link rel="stylesheet" type="text/css" href="/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/overlay.css?cb=mintchip150goog-ws-leftnone30themedefaultstandard" />
+<link rel="stylesheet" type="text/css" href="/site/thraciansoftware1/_/rsrc/1486051552000/system/app/css/camelot/allthemes-view.css" />
 <!--[if IE]>
-          <link rel="stylesheet" type="text/css" href="/site/ThracianSoftware1/system/app/css/camelot/allthemes%2die.css" />
+          <link rel="stylesheet" type="text/css" href="/site/thraciansoftware1/system/app/css/camelot/allthemes%2die.css" />
         <![endif]-->
 <title>Letonai Studio - Privacy Policy</title>
 <script type="text/javascript">
@@ -27,7 +63,7 @@
 <div xmlns="http://www.w3.org/1999/xhtml" id="sites-chrome-header-wrapper" style="">
 <table id="sites-chrome-header" class="sites-layout-hbox" cellspacing="0" style="">
 <tr class="sites-header-primary-row" id="sites-chrome-userheader">
-<td id="sites-header-title" class="" role="banner"><div class="sites-header-cell-buffer-wrapper"><h2><a href="https://sites.google.com/site/letonaistudio/" dir="ltr" id="sites-chrome-userheader-title">letonaistudio</a></h2></div></td><td class="sites-layout-searchbox  "><div class="sites-header-cell-buffer-wrapper"><form id="sites-searchbox-form" action="/site/letonaistudio/system/app/pages/search" role="search"><input type="hidden" id="sites-searchbox-scope" name="scope" value="search-site" /><input type="text" id="jot-ui-searchInput" name="q" size="20" value="" aria-label="Bu sitede ara" /><div id="sites-searchbox-button-set" class="goog-inline-block"><div role="button" id="sites-searchbox-search-button" class="goog-inline-block jfk-button jfk-button-standard" tabindex="0">Bu sitede ara</div></div></form></div></td>
+<td id="sites-header-title" class="" role="banner"><div class="sites-header-cell-buffer-wrapper"><h2><a href="#" dir="ltr" id="sites-chrome-userheader-title">Letonai Studio</a></h2></div></td><td class="sites-layout-searchbox  "><div class="sites-header-cell-buffer-wrapper"><form id="sites-searchbox-form" action="/site/thraciansoftware1/system/app/pages/search" role="search"><input type="hidden" id="sites-searchbox-scope" name="scope" value="search-site" /><input type="text" id="jot-ui-searchInput" name="q" size="20" value="" aria-label="Bu sitede ara" /><div id="sites-searchbox-button-set" class="goog-inline-block"><div role="button" id="sites-searchbox-search-button" class="goog-inline-block jfk-button jfk-button-standard" tabindex="0">Bu sitede ara</div></div></form></div></td>
 </tr>
 <tr class="sites-header-secondary-row" id="sites-chrome-horizontal-nav">
 <td colspan="2" id="sites-chrome-header-horizontal-nav-container" role="navigation">
@@ -40,7 +76,7 @@
 <table id="sites-chrome-main" class="sites-layout-hbox" cellspacing="0" cellpadding="{scmCellpadding}" border="0">
 <tr>
 <td id="sites-chrome-sidebar-left" class="sites-layout-sidebar-left initial" style="width:150px">
-<div xmlns="http://www.w3.org/1999/xhtml" id="COMP_2bd" class="sites-embed" role="navigation"><div class="sites-embed-content sites-sidebar-nav"><ul role="navigation" jotId="navList"><li class="nav-first "><div class="current-bg" jotId="wuid:gx:2aec587f2890a0e" dir="ltr" style="padding-left: 5px;">Privacy Policy</div></li><li class=""><div dir="ltr" style="padding-left: 5px;"><a href="/site/letonaistudio/system/app/pages/sitemap/hierarchy" jotId="wuid:gx:49fb002a18ad8f25" class="sites-navigation-link">Site Haritası</a></div></li></ul></div></div>
+<div xmlns="http://www.w3.org/1999/xhtml" id="COMP_2bd" class="sites-embed" role="navigation"><div class="sites-embed-content sites-sidebar-nav"><ul role="navigation" jotId="navList"><li class="nav-first "><div class="current-bg" jotId="wuid:gx:2aec587f2890a0e" dir="ltr" style="padding-left: 5px;">Privacy Policy</div></li><li class=""><div dir="ltr" style="padding-left: 5px;"><a href="/site/thraciansoftware1/system/app/pages/sitemap/hierarchy" jotId="wuid:gx:49fb002a18ad8f25" class="sites-navigation-link">Site Haritası</a></div></li></ul></div></div>
 </td>
 <td id="sites-canvas-wrapper">
 <div id="sites-canvas" role="main">
@@ -52,10 +88,11 @@
 </h3>
 <div id="sites-canvas-main" class="sites-canvas-main">
 <div id="sites-canvas-main-content">
-<table xmlns="http://www.w3.org/1999/xhtml" cellspacing="0" class="sites-layout-name-one-column sites-layout-hbox"><tbody><tr><td class="sites-layout-tile sites-tile-name-content-1"><div dir="ltr"><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Your privacy is important to Letonai Studio.
+<table xmlns="http://www.w3.org/1999/xhtml" cellspacing="0" class="sites-layout-name-one-column sites-layout-hbox"><tbody><tr><td class="sites-layout-tile sites-tile-name-content-1"><div dir="ltr"><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Your privacy is important to Letonai Studios.
 Sometimes we need information to provide services that you request, this
 privacy statement applies to thraciansoftware.com and its products, namely
-Truck Madness, Flappy porky, Fart button, Ba dum tss - Rimshot widget, álcool ou Gasolina, PigScape
+Flappy Porky, Álcool ou gasolina, Truck Madness
+Ba da dum tss - Rimshot widget </span><br />
 <br />
 <b>Personal Information</b> <br />
 We DO NOT collect, store or use any personal information while you visit,
@@ -85,11 +122,11 @@ for the purposes of this Privacy Policy. </span><br />
 We may collect information about the services that you use and how you use
 them, such as when you view and interact with our content. We may collect
 device-specific information (such as your hardware model, operating system
-version, unique device identifiers, and mobile network information). Thracian
-Software will not share that information with third parties. <br />
+version, unique device identifiers, and mobile network information). Letonai Studios 
+will not share that information with third parties. <br />
 <br />
 <b>Location information </b><br />
-When you use a location-enabled Letonai Studio service, we may collect and
+When you use a location-enabled Letonai Studios service, we may collect and
 process information about your actual location, like GPS signals sent by a
 mobile device. We may also use various technologies to determine location, such
 as sensor data from your device that may, for example, provide information on
@@ -128,7 +165,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
 </div> 
 </div> 
 <div id="sites-chrome-adminfooter-container">
-<div xmlns="http://www.w3.org/1999/xhtml" class="sites-adminfooter" role="navigation"><p><a class="sites-system-link" href="https://www.google.com/a/UniversalLogin?continue=https://sites.google.com/site/letonaistudio/home&amp;service=jotspot">Fazer login</a><span aria-hidden="true">|</span><a class="sites-system-link" href="/site/letonaistudio/system/app/pages/recentChanges">Atividade recente no site</a><span aria-hidden="true">|</span><a class="sites-system-link" href="https://sites.google.com/site/letonaistudio/system/app/pages/reportAbuse" target="_blank">Denunciar abuso</a><span aria-hidden="true">|</span><a class="sites-system-link" href="javascript:;" onclick="window.open(webspace.printUrl)">Imprimir página</a><span aria-hidden="true">|</span><span class="sites-system-link">Tecnologia</span> <b class="powered-by"><a href="http://sites.google.com">Google Sites</a></b></p></div>
+<div xmlns="http://www.w3.org/1999/xhtml" class="sites-adminfooter" role="navigation"><p><a class="sites-system-link" href="https://www.google.com/a/UniversalLogin?continue=https://sites.google.com/site/thraciansoftware1/home&amp;service=jotspot">Fazer login</a><span aria-hidden="true">|</span><a class="sites-system-link" href="/site/thraciansoftware1/system/app/pages/recentChanges">Atividade recente no site</a><span aria-hidden="true">|</span><a class="sites-system-link" href="https://sites.google.com/site/thraciansoftware1/system/app/pages/reportAbuse" target="_blank">Denunciar abuso</a><span aria-hidden="true">|</span><a class="sites-system-link" href="javascript:;" onclick="window.open(webspace.printUrl)">Imprimir página</a><span aria-hidden="true">|</span><span class="sites-system-link">Tecnologia</span> <b class="powered-by"><a href="http://sites.google.com">Google Sites</a></b></p></div>
 </div>
 </div> 
 </div> 
@@ -141,7 +178,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
 <script xmlns="http://www.w3.org/1999/xhtml" type="text/javascript">
     window.jstiming.load.tick('jl');
   </script>
-<script xmlns="http://www.w3.org/1999/xhtml">if (webspace.editorResources['text']) {webspace.editorResources['text'].unshift('\/site\/letonaistudio\/system\/app\/css\/overlay.css?cb\x3dmintchip150goog-ws-leftnone30themedefaultstandard');webspace.editorResources['text'].unshift('\/site\/letonaistudio\/_\/rsrc\/1486051552000\/system\/app\/themes\/mintchip\/standard-css-mintchip-ltr-ltr.css');}</script>
+<script xmlns="http://www.w3.org/1999/xhtml">if (webspace.editorResources['text']) {webspace.editorResources['text'].unshift('\/site\/thraciansoftware1\/system\/app\/css\/overlay.css?cb\x3dmintchip150goog-ws-leftnone30themedefaultstandard');webspace.editorResources['text'].unshift('\/site\/thraciansoftware1\/_\/rsrc\/1486051552000\/system\/app\/themes\/mintchip\/standard-css-mintchip-ltr-ltr.css');}</script>
 <script xmlns="http://www.w3.org/1999/xhtml">
       
           sites.core.Analytics.createTracker();
@@ -153,7 +190,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
                         'sites-searchbox-search-button',
                         {"object":[]}['object'],
                         'search-site',
-                        {"label":"Arama se\u00e7eneklerini yap\u0131land\u0131r...","url":"/site/letonaistudio/system/app/pages/admin/settings"});
+                        {"label":"Arama se\u00e7eneklerini yap\u0131land\u0131r...","url":"/site/thraciansoftware1/system/app/pages/admin/settings"});
                   </script>
 <script xmlns="http://www.w3.org/1999/xhtml" type="text/javascript">
       gsites.HoverPopupMenu.createSiteDropdownMenus('sites-header-nav-dropdown', false);
@@ -165,7 +202,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
 <script xmlns="http://www.w3.org/1999/xhtml" type="text/javascript">
   setTimeout(function() {
     var fingerprint = gsites.date.TimeZone.getFingerprint([1109635200000, 1128902400000, 1130657000000, 1143333000000, 1143806400000, 1145000000000, 1146380000000, 1152489600000, 1159800000000, 1159500000000, 1162095000000, 1162075000000, 1162105500000]);
-    gsites.Xhr.send('https://sites.google.com/site/letonaistudio/_/tz', null, null, 'GET', null, null, { afjstz: fingerprint });
+    gsites.Xhr.send('https://sites.google.com/site/thraciansoftware1/_/tz', null, null, 'GET', null, null, { afjstz: fingerprint });
   }, 500);
 </script>
 <script xmlns="http://www.w3.org/1999/xhtml">
@@ -198,6 +235,7 @@ statement. </span></p><p align="left" style="margin:0px 0px 10px;color:rgb(51,51
     if (webspace.user.hasWriteAccess) {
       JOT_decorateButtons();
     }
+
     // Fires delayed events.
     (function() {
       JOT_fullyLoaded = true;
