--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -91,7 +91,7 @@ window.JOT_formatRelativeToNow=function(a,b){a=((new Date).getTime()-a)/6E4;if(1
 <table xmlns="http://www.w3.org/1999/xhtml" cellspacing="0" class="sites-layout-name-one-column sites-layout-hbox"><tbody><tr><td class="sites-layout-tile sites-tile-name-content-1"><div dir="ltr"><p style="margin-bottom:7.5pt;line-height:normal;background-image:initial;background-position:initial;background-repeat:initial"><span style="font-size:10.5pt;font-family:Helvetica,sans-serif;color:#333333">Your privacy is important to Letonai Studios.
 Sometimes we need information to provide services that you request, this
 privacy statement applies to thraciansoftware.com and its products, namely
-Flappy Porky, Álcool ou gasolina, Truck Madness
+Flappy Porky, Álcool ou gasolina, Truck Madness,
 Ba da dum tss - Rimshot widget </span><br />
 <br />
 <b>Personal Information</b> <br />
