--- a/dotz.html
+++ b/dotz.html
@@ -23,13 +23,13 @@
     compatibilitycheck: null,
     backgroundColor: "#222C36",
     splashStyle: "Light",
-    dataUrl: "Development/DotzEregrets.data",
-    codeUrl: "Development/DotzEregrets.js",
-    asmUrl: "Development/DotzEregrets.asm.js",
-    memUrl: "Development/DotzEregrets.mem",
+    dataUrl: "Release/DotzEregrets.data",
+    codeUrl: "Release/DotzEregrets.js",
+    asmUrl: "Release/DotzEregrets.asm.js",
+    memUrl: "Release/DotzEregrets.mem",
   };
 </script>
-<script src="Development/UnityLoader.js"></script>
+<script src="Release/UnityLoader.js"></script>
 
   </body>
 </html>
