--- a/dotz.html
+++ b/dotz.html
@@ -9,6 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
   </head>
   <body class="template">
+      <center><h2>Attention, it's just a WIP not a complete project, updates weekly!</h2></center>
     <div class="template-wrap clear">
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas>
       <br>
