--- a/dotz.html
+++ b/dotz.html
@@ -9,8 +9,8 @@
     <script src="TemplateData/UnityProgress.js"></script>
   </head>
   <body class="template">
-      <center><h2>Attention, it's just a WIP not a complete project, updates weekly!</h2></center>
     <div class="template-wrap clear">
+        <center><h2>ATTETION! It's just a WIP,not a complete work, updated weekly! </h2></center>
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas>
       <br>
       <div class="logo"></div>
