--- a/dotz.html
+++ b/dotz.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
   </head>
   <body class="template">
-       <center><h2>ATTETION! It's just a WIP,not a complete work, updated weekly! </h2></center>
+       <center><h2>ATTENTION! It's just a WIP,not a complete work, updated weekly! </h2></center>
     <div class="template-wrap clear">
        
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas>
